feat(new-blog): biryani i ate in hyderabad

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,12 @@
 @tailwind utilities;
 
 @layer base {
+  :root {
+    --primary: 232 79 59;
+    --background: 0 0 93;
+    --text: 0 0 9;
+  }
+
   html {
     @apply bg-background text-text selection:bg-primary selection:text-background scroll-m-20 scroll-smooth;
   }
