--- a/app/globals.css
+++ b/app/globals.css
@@ -20,3 +20,27 @@
     @apply text-primary bg-primary/20 px-2 py-1 rounded-md text-sm;
   }
 }
+
+.dot {
+  opacity: 0;
+  animation: dot-blink 1.4s infinite ease-in-out both;
+}
+
+.dot:nth-child(1) {
+  animation-delay: -0.32s;
+}
+
+.dot:nth-child(2) {
+  animation-delay: -0.16s;
+}
+
+@keyframes dot-blink {
+  0%,
+  80%,
+  100% {
+    opacity: 0;
+  }
+  40% {
+    opacity: 1;
+  }
+}
